<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>battery_level_broadcaster</name>
    <version>1.0.0</version>
    <description>Controller to publish battery sensor message.</description>
    <maintainer email="info@netizenrobotics.com">Netizen Robotics</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>backward_ros</depend>
    <depend>controller_interface</depend>
    <depend>generate_parameter_library</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>realtime_tools</depend>
    <depend>sensor_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>